--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html lang="en">
 
 <head>
+    <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="FocusTime - Boost your productivity with the Pomodoro Technique.">
+    <meta name="keywords" content="Pomodoro, productivity, timer, time management">
+    <!-- Standard favicon -->
+    <link rel="icon" href="assets/images/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="assets/images/favicon-16x16.png" sizes="16x16" type="image/png">
+    <!-- Apple Touch Icon (iPhone, iPad) -->
+    <link rel="apple-touch-icon" href="assets/images/favicon-180x180.png">
+    <!-- Android and other platforms -->
+    <link rel="icon" href="assets/images/android-chrome-192x192.png" sizes="192x192" type="image/png">
+    <!-- Fallback favicon for other devices -->
+    <link rel="icon" href="assets/images/android-chrome-512x512.png" sizes="512x512" type="image/png">
     <title>FocusTime</title>
     <!-- Font Awesome for Icons -->
     <script src="https://kit.fontawesome.com/57b0f09c00.js" crossorigin="anonymous"></script>
