Added HTML structure for navigation, header, and intro section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,36 @@
 </head>
 
 <body>
+    <!-- Sidebar -->
+    <nav id="sidebar" class="sidebar">
+        <a href="#" class="close-btn">&times;</a>
+        <a href="#" data-modal="about-modal"><i class="fa-solid fa-circle-info"></i> About</a>
+        <a href="#" data-modal="profile-modal"><i class="fa-solid fa-user"></i> Profile</a>
+        <a href="#" data-modal="contact-modal"><i class="fa-solid fa-message"></i> Contact</a>
+        <footer class="sidebar-footer">
+            <p>&copy; 2024 FocusTime</p>
+            <div class="social-icons">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-x-twitter"></i>
+            </div>
+        </footer>
+    </nav>
 
+    <!-- Top Bar with Menu Button and Heading -->
+    <header class="top-bar">
+        <button class="open-btn"><i class="fa-solid fa-bars"></i></button>
+        <h1>F<i class="fa-solid fa-clock"></i>cusTime</h1>
+    </header>
+
+    <!-- Main content -->
+    <main id="content">
+        <div class="intro">
+            <h2>Boost your productivity with the Pomodoro Technique.</h2>
+        </div>
+
+        <!-- JavaScript -->
+        <script src="assets/js/script.js"></script>
 </body>
 
 </html>
