--- a/index.html
+++ b/index.html
@@ -85,6 +85,30 @@
         </div>
     </main>
 
+    <!-- Modal for Customization -->
+    <div id="customization-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <h2>Customize Your Timer</h2>
+            <!-- Timer duration options -->
+            <label for="work-duration">Work Duration (minutes): </label>
+            <input type="number" id="work-duration" min="15" max="60" value="25">
+            <label for="short-break-duration">Short Break (minutes): </label>
+            <input type="number" id="short-break-duration" min="5" max="15" value="5">
+            <label for="long-break-duration">Long Break (minutes): </label>
+            <input type="number" id="long-break-duration" min="15" max="30" value="15">
+
+            <!-- Dark Mode and Notifications Toggle -->
+            <label for="dark-mode-toggle">Dark Mode:</label>
+            <div id="dark-mode-toggle" class="toggle-switch"></div>
+
+            <label for="notifications-toggle">Notifications:</label>
+            <div id="notifications-toggle" class="toggle-switch"></div>
+
+            <button id="save-btn">Save</button>
+        </div>
+    </div>
+
     <!-- JavaScript -->
     <script src="assets/js/script.js"></script>
 </body>
