Added HTML structure for about modal

--- a/index.html
+++ b/index.html
@@ -109,6 +109,36 @@
         </div>
     </div>
 
+    <!-- About Modal -->
+    <div id="about-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <h3>About FocusTime</h3>
+            <p>FocusTime is a productivity tool based on the Pomodoro technique. It helps you manage your time by
+                working in focused intervals, followed by short breaks, to maintain high productivity levels without
+                burnout.
+            </p>
+            <h3>What is the Pomodoro Technique?</h3>
+            <p>The Pomodoro Technique is a time management method developed by Francesco Cirillo in the late 1980s. The
+                technique uses a timer to break down work into intervals, traditionally 25 minutes in length, separated
+                by
+                short breaks.</p>
+            <h3>How the Pomodoro Technique Works</h3>
+            <ul>
+                <li>Work for 25 minutes (1 Pomodoro Session)</li>
+                <li>Take a 5-minute break after each session</li>
+                <li>After 4 sessions, take a longer break (15-30 minutes)</li>
+            </ul>
+            <h3>Benefits of using FocusTime</h3>
+            <ul>
+                <li>Improves focus and concentration</li>
+                <li>Reduces procrastination</li>
+                <li>Stay on track with your tasks</li>
+                <li>Helps manage distractions</li>
+            </ul>
+        </div>
+    </div>
+
     <!-- JavaScript -->
     <script src="assets/js/script.js"></script>
 </body>
