Added aria labels and links to social media icons in sidebar footer

--- a/index.html
+++ b/index.html
@@ -37,11 +37,18 @@
         <a href="#" data-modal="profile-modal"><i class="fa-solid fa-user"></i> Profile</a>
         <a href="#" data-modal="contact-modal"><i class="fa-solid fa-message"></i> Contact</a>
         <footer class="sidebar-footer">
-            <p>&copy; 2024 FocusTime</p>
+            <p>&copy; FocusTime 2024</p>
+            <p>Visit Us On Social Media</p>
             <div class="social-icons">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-x-twitter"></i>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-x-twitter"></i></a>
             </div>
         </footer>
     </nav>
