Removed for attributes from dark mode and notification toggles are issue was highlighted in first test

--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
             <input type="number" id="long-break-duration" min="15" max="30" value="15">
 
             <!-- Dark Mode and Notifications Toggle -->
-            <label for="dark-mode-toggle">Dark Mode:</label>
-            <div id="dark-mode-toggle" class="toggle-switch" role="switch" aria-label="Enable Dark Mode"></div>
+            <p>Dark Mode:</p>
+            <div id="dark-mode-toggle" class="toggle-switch" aria-label="Enable Dark Mode"></div>
 
-            <label for="notifications-toggle">Notifications:</label>
-            <div id="notifications-toggle" class="toggle-switch" role="switch" aria-label="Enable Notifications"></div>
+            <p>Notifications:</p>
+            <div id="notifications-toggle" class="toggle-switch" aria-label="Enable Notifications"></div>
 
             <button id="save-btn" aria-label="Save Settings">Save</button>
         </div>
@@ -119,7 +119,7 @@
     <!-- About Modal -->
     <div id="about-modal" class="modal">
         <div class="modal-content">
-            <span class="close-btn" aria-label="Close Window">&times;</span>
+            <span class="close-btn">&times;</span>
             <h3>About FocusTime</h3>
             <p>FocusTime is a productivity tool based on the Pomodoro technique. It helps you manage your time by
                 working in focused intervals, followed by short breaks, to maintain high productivity levels without
@@ -149,7 +149,7 @@
     <!-- Profile Modal -->
     <div id="profile-modal" class="modal">
         <div class="modal-content">
-            <span class="close-btn" aria-label="Close Window">&times;</span>
+            <span class="close-btn">&times;</span>
             <div id="sign-in-form" class="auth-form">
                 <h2>Sign In</h2>
                 <form action="https://formdump.codeinstitute.net/" method="POST">
@@ -179,7 +179,7 @@
     <!-- Contact Modal -->
     <div id="contact-modal" class="modal">
         <div class="modal-content">
-            <span class="close-btn" aria-label="Close Window">&times;</span>
+            <span class="close-btn">&times;</span>
             <h2>Contact Us</h2>
             <form id="feedback-form" action="https://formdump.codeinstitute.net/" method="POST">
                 <label for="contact-email">Email:</label>
