Refactored updateProgress and resetTimer functions afterinitial testing; retain notification variable to handle side effects

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- Modal for Customization -->
     <div id="customization-modal" class="modal">
         <div class="modal-content">
-            <span class="close-btn" aria-label="Close Window">&times;</span>
+            <span class="close-btn">&times;</span>
             <h2>Customize Your Timer</h2>
             <!-- Timer duration options -->
             <label for="work-duration">Work Duration (minutes): </label>
@@ -107,10 +107,10 @@
 
             <!-- Dark Mode and Notifications Toggle -->
             <p>Dark Mode:</p>
-            <div id="dark-mode-toggle" class="toggle-switch" aria-label="Enable Dark Mode"></div>
+            <div id="dark-mode-toggle" class="toggle-switch"></div>
 
             <p>Notifications:</p>
-            <div id="notifications-toggle" class="toggle-switch" aria-label="Enable Notifications"></div>
+            <div id="notifications-toggle" class="toggle-switch"></div>
 
             <button id="save-btn" aria-label="Save Settings">Save</button>
         </div>
